@@ -1,11 +1,14 @@
 package com.ecommerce.order_service.service;
 
 
+import com.ecommerce.order_service.client.ProductServiceClient;
 import com.ecommerce.order_service.exceptions.APIException;
 import com.ecommerce.order_service.exceptions.ResourceNotFoundException;
 import com.ecommerce.order_service.model.Cart;
 import com.ecommerce.order_service.model.CartItem;
+import com.ecommerce.order_service.model.ProductSnapshot;
 import com.ecommerce.order_service.payload.CartDTO;
+import com.ecommerce.order_service.payload.ProductDTO;
 import com.ecommerce.order_service.repositories.CartItemRepository;
 import com.ecommerce.order_service.repositories.CartRepository;
 import com.ecommerce.order_service.util.AuthUtil;
@@ -15,6 +18,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -27,62 +31,48 @@ public class CartServiceImpl implements CartService {
     private AuthUtil authUtil;
 
     @Autowired
-    private ProductRepository productRepository;
-
-    @Autowired
     private CartItemRepository cartItemRepository;
 
     @Autowired
     private ModelMapper modelMapper;
 
-    @Override
+    @Autowired
+    private ProductServiceClient productServiceClient;
 
+    @Override
     public CartDTO addProductToCart(Long productId, Integer quantity) {
         Cart cart = createCart();
 
-        Product product = productRepository.findById(productId).orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
-
-        CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cart.getCartId(), productId);
-        if (cartItem != null) {
-            throw new APIException("Product " + product.getProductName() + "already exists in the cart");
+        ProductDTO product = productServiceClient.getProductById(productId);
+        if (product == null) {
+            throw new ResourceNotFoundException("Product", "productId", productId);
         }
 
-        if (product.getQuantity() == 0) {
-            throw new APIException(product.getProductName() + " is not available");
+        CartItem existingItem = cartItemRepository.findCartItemByProductIdAndCartId(cart.getCartId(), productId);
+        if (existingItem != null) {
+            throw new APIException("Product " + product.getProductName() + " already exists in the cart");
         }
 
-        if (product.getQuantity() < quantity) {
-            throw new APIException("Please, make an order of the " + product.getProductName() + " less than or equal to the quantity " + product.getQuantity() + ".");
-        }
+
+        validateInventory(product, quantity, 0);
 
         CartItem newCartItem = new CartItem();
 
-        newCartItem.setProduct(product);
+
         newCartItem.setCart(cart);
         newCartItem.setQuantity(quantity);
         newCartItem.setDiscount(product.getDiscount());
         newCartItem.setProductPrice(product.getSpecialPrice());
+        newCartItem.setProductSnapshot(mapToSnapshot(product));
 
-        cartItemRepository.save(newCartItem);
-
-        product.setQuantity(product.getQuantity());
+        cart.getCartItems().add(newCartItem);
 
         cart.setTotalPrice(cart.getTotalPrice() + (product.getSpecialPrice() * quantity));
 
         cartRepository.save(cart);
+        cartItemRepository.save(newCartItem);
 
-        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-
-        List<CartItem> cartItems = cart.getCartItems();
-
-        Stream<ProductDTO> productStream = cartItems.stream().map(item -> {
-            ProductDTO productDTO = modelMapper.map(item.getProduct(), ProductDTO.class);
-            productDTO.setQuantity(item.getQuantity());
-            return productDTO;
-        });
-
-        cartDTO.setProducts(productStream.toList());
-        return cartDTO;
+        return mapToCartDTO(cartRepository.findById(cart.getCartId()).orElse(cart));
     }
 
     @Override
@@ -92,17 +82,7 @@ public class CartServiceImpl implements CartService {
             throw new APIException("No cart exist");
         }
 
-        List<CartDTO> cartDTOS = carts.stream().map(cart -> {
-            CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-            List<ProductDTO> productDTOS = cart.getCartItems().stream().map(ci -> {
-                ProductDTO productDTO = modelMapper.map(ci.getProduct(), ProductDTO.class);
-                productDTO.setQuantity(ci.getQuantity());
-                return productDTO;
-            }).collect(Collectors.toList());
-            cartDTO.setProducts(productDTOS);
-            return cartDTO;
-        }).toList();
-        return cartDTOS;
+        return carts.stream().map(this::mapToCartDTO).toList();
     }
 
     @Override
@@ -111,70 +91,52 @@ public class CartServiceImpl implements CartService {
         if (cart == null) {
             throw new ResourceNotFoundException("Cart", "cartId", cartId);
         }
-        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-        cart.getCartItems().forEach(c -> c.getProduct().setQuantity(c.getQuantity()));
-        List<ProductDTO> productDTOS = cart.getCartItems().stream().map(ci -> modelMapper.map(ci.getProduct(), ProductDTO.class)).toList();
-        cartDTO.setProducts(productDTOS);
-        return cartDTO;
+        return mapToCartDTO(cart);
     }
 
     @Override
     @Transactional
     public CartDTO updateProductQuantityInCart(Long productId, Integer quantity) {
-        String emailId = authUtil.loggedInEmail();
-        Cart userCart = cartRepository.findCartByEmail(emailId);
-        Long cartId = userCart.getCartId();
-
-        Cart cart = cartRepository.findById(cartId).orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
-
-        Product product = productRepository.findById(productId).orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
-
-        if (product.getQuantity() == 0) {
-            throw new APIException(product.getProductName() + " is not available");
+        Cart cart = cartRepository.findCartByEmail(authUtil.loggedInEmail());
+        if (cart == null) {
+            throw new ResourceNotFoundException("Cart", "email", authUtil.loggedInEmail());
         }
 
-        if (product.getQuantity() < quantity) {
-            throw new APIException("Please, make an order of the " + product.getProductName() + " less than or equal to the quantity " + product.getQuantity());
+        ProductDTO product = productServiceClient.getProductById(productId);
+        if (product == null) {
+            throw new ResourceNotFoundException("Product", "productId", productId);
         }
 
-        CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
+        CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cart.getCartId(), productId);
         if (cartItem == null) {
             throw new APIException("Product " + product.getProductName() + " not available in the cart!!");
         }
 
-        //Calculate new quantity
+
         int newQuantity = cartItem.getQuantity() + quantity;
 
-        //Validation to prevent negative quantities
         if (newQuantity < 0) {
             throw new APIException("The resulting quantity cannot be negative.");
         }
 
         if (newQuantity == 0) {
-            deleteProductFromCart(cartId, productId);
-        } else {
-            cartItem.setProductPrice(product.getSpecialPrice());
-            cartItem.setQuantity(cartItem.getQuantity() + quantity);
-            cartItem.setDiscount(product.getDiscount());
-            cart.setTotalPrice(cart.getTotalPrice() + (cartItem.getProductPrice() * quantity));
-            cartRepository.save(cart);
+            deleteProductFromCart(cart.getCartId(), productId);
+            return mapToCartDTO(cartRepository.findById(cart.getCartId()).orElse(cart));
         }
-        CartItem updatedItem = cartItemRepository.save(cartItem);
-        if (updatedItem.getQuantity() == 0) {
-            cartItemRepository.deleteById(updatedItem.getCartItemId());
+        if (quantity > 0) {
+            validateInventory(product, quantity, cartItem.getQuantity());
         }
 
-        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-        List<CartItem> cartItems = cart.getCartItems();
+        cartItem.setQuantity(newQuantity);
+        cartItem.setProductPrice(product.getSpecialPrice());
+        cartItem.setDiscount(product.getDiscount());
+        updateSnapshot(cartItem, product);
 
-        Stream<ProductDTO> productDTOStream = cartItems.stream().map(item -> {
-            ProductDTO prd = modelMapper.map(item.getProduct(), ProductDTO.class);
-            prd.setQuantity(item.getQuantity());
-            return prd;
-        });
+        cart.setTotalPrice(cart.getTotalPrice() + (cartItem.getProductPrice() * quantity));
+        cartRepository.save(cart);
+        cartItemRepository.save(cartItem);
 
-        cartDTO.setProducts(productDTOStream.toList());
-        return cartDTO;
+        return mapToCartDTO(cartRepository.findById(cart.getCartId()).orElse(cart));
     }
 
     @Transactional
@@ -189,28 +151,37 @@ public class CartServiceImpl implements CartService {
         cart.setTotalPrice(cart.getTotalPrice() - (cartItem.getProductPrice() * cartItem.getQuantity()));
 
         cartItemRepository.deleteCartItemByProductIdAndCartId(cartId, productId);
-        return "Product " + cartItem.getProduct().getProductName() + " removed from the cart!!!";
+        return "Product " + cartItem.getProductSnapshot().getProductName() + " removed from the cart!!!";
     }
 
     @Override
     public void updateProductInCarts(Long cartId, Long productId) {
         Cart cart = cartRepository.findById(cartId).orElseThrow(() -> new ResourceNotFoundException("Cart", "cartId", cartId));
 
-        Product product = productRepository.findById(productId).orElseThrow(() -> new ResourceNotFoundException("Product", "productId", productId));
 
         CartItem cartItem = cartItemRepository.findCartItemByProductIdAndCartId(cartId, productId);
 
         if (cartItem == null) {
-            throw new APIException("Product " + product.getProductName() + " not available in the cart");
+            throw new APIException("Product not available in the cart");
+        }
+
+
+        ProductDTO product = productServiceClient.getProductById(productId);
+        if (product == null) {
+            throw new ResourceNotFoundException("Product", "productId", productId);
         }
 
         double cartPrice = cart.getTotalPrice() - (cartItem.getProductPrice() * cartItem.getQuantity());
 
         cartItem.setProductPrice(product.getSpecialPrice());
 
+        cartItem.setDiscount(product.getDiscount());
+        updateSnapshot(cartItem, product);
+
         cart.setTotalPrice(cartPrice + (cartItem.getProductPrice() * cartItem.getQuantity()));
 
         cartItemRepository.save(cartItem);
+        cartRepository.save(cart);
     }
 
     private Cart createCart() {
@@ -220,8 +191,67 @@ public class CartServiceImpl implements CartService {
         }
         Cart cart = new Cart();
         cart.setTotalPrice(0.0);
-        cart.setUser(authUtil.loggedInUser());
-        Cart newCart = cartRepository.save(cart);
-        return newCart;
+        cart.setUserEmail(authUtil.loggedInEmail());
+        return cartRepository.save(cart);
+    }
+
+    private CartDTO mapToCartDTO(Cart cart) {
+        CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
+        cartDTO.setProducts(cart.getCartItems().stream().filter(Objects::nonNull).map(this::mapToProductDTO).collect(Collectors.toList()));
+        return cartDTO;
+    }
+
+    private ProductDTO mapToProductDTO(CartItem item) {
+        ProductSnapshot snapshot = item.getProductSnapshot();
+        if (snapshot == null) {
+            ProductDTO dto = new ProductDTO();
+            dto.setQuantity(item.getQuantity());
+            return dto;
+        }
+        ProductDTO dto = new ProductDTO();
+        dto.setProductId(snapshot.getProductId());
+        dto.setProductName(snapshot.getProductName());
+        dto.setImage(snapshot.getImage());
+        dto.setPrice(snapshot.getPrice() == null ? 0.0 : snapshot.getPrice());
+        dto.setDiscount(snapshot.getDiscount() == null ? 0.0 : snapshot.getDiscount());
+        dto.setSpecialPrice(snapshot.getSpecialPrice() == null ? 0.0 : snapshot.getSpecialPrice());
+        dto.setQuantity(item.getQuantity());
+        return dto;
+    }
+
+    private ProductSnapshot mapToSnapshot(ProductDTO product) {
+        return new ProductSnapshot(
+                product.getProductId(),
+                product.getProductName(),
+                product.getImage(),
+                product.getPrice(),
+                product.getDiscount(),
+                product.getSpecialPrice()
+        );
+    }
+
+    private void updateSnapshot(CartItem cartItem, ProductDTO product) {
+        ProductSnapshot snapshot = cartItem.getProductSnapshot();
+        if (snapshot == null) {
+            cartItem.setProductSnapshot(mapToSnapshot(product));
+            return;
+        }
+        snapshot.setProductName(product.getProductName());
+        snapshot.setImage(product.getImage());
+        snapshot.setPrice(product.getPrice());
+        snapshot.setDiscount(product.getDiscount());
+        snapshot.setSpecialPrice(product.getSpecialPrice());
+    }
+
+    private void validateInventory(ProductDTO product, Integer quantity, int existingQuantity) {
+        if (product.getQuantity() == null || product.getQuantity() <= 0) {
+            throw new APIException(product.getProductName() + " is not available");
+        }
+        if (quantity != null && quantity > 0) {
+            int desiredQuantity = existingQuantity + quantity;
+            if (desiredQuantity > product.getQuantity()) {
+                throw new APIException("Please, make an order of the " + product.getProductName() + " less than or equal to the quantity " + product.getQuantity() + ".");
+            }
+        }
     }
 }
